--- a/content/data/config.json
+++ b/content/data/config.json
@@ -137,5 +137,6 @@
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
     },
-    "domain": "https://as-net-a417f.netlify.app"
+    "domain": "https://as-net-a417f.netlify.app",
+    "favicon": "/images/favicon.ico"
 }
