config.json: updated domain

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -137,6 +137,6 @@
         "anncmnt_has_close": true,
         "anncmnt_id": "new-features"
     },
-    "domain": "https://as-net-a417f.netlify.app",
+    "domain": "https://www.artisan-solution.net",
     "favicon": "/images/favicon.ico"
 }
