--- a/content/data/config.json
+++ b/content/data/config.json
@@ -9,7 +9,7 @@
     "header": {
         "title": "Personal",
         "logo": "/images/Logo_Transparent_Grand (1).png",
-        "logo_alt": "Personal logo",
+        "logo_alt": "Artisan Solution",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
