--- a/content/data/config.json
+++ b/content/data/config.json
@@ -25,7 +25,8 @@
             {
                 "label": "Contact",
                 "url": "/contact",
-                "style": "link"
+                "style": "link",
+                "has_icon": true
             }
         ],
         "has_secondary_nav": false
