--- a/content/data/config.json
+++ b/content/data/config.json
@@ -26,7 +26,7 @@
                 "label": "Contact",
                 "url": "/contact",
                 "style": "link",
-                "has_icon": true
+                "has_icon": false
             }
         ],
         "has_secondary_nav": false
