config.json: updated title in header

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -7,7 +7,7 @@
     "mode": "light",
     "base_font": "serif",
     "header": {
-        "title": "Personal",
+        "title": "Header",
         "logo": "/images/Logo_Transparent_Grand (1).png",
         "logo_alt": "Artisan Solution",
         "has_primary_nav": true,
