--- a/content/data/config.json
+++ b/content/data/config.json
@@ -27,7 +27,7 @@
         "has_secondary_nav": false
     },
     "footer": {
-        "logo": "images/logo.svg",
+        "logo": "/images/Logo_Transparent_Grand (1)-6d3e4823.png",
         "logo_alt": "Personal logo",
         "has_primary_nav": true,
         "primary_nav_links": [
