--- a/content/data/config.json
+++ b/content/data/config.json
@@ -28,7 +28,7 @@
     },
     "footer": {
         "logo": "/images/Logo_Transparent_Grand (1)-6d3e4823.png",
-        "logo_alt": "Personal logo",
+        "logo_alt": "Artisan Solution",
         "has_primary_nav": true,
         "primary_nav_links": [
             {
