--- a/content/data/config.json
+++ b/content/data/config.json
@@ -29,7 +29,7 @@
     "footer": {
         "logo": "/images/Logo_Transparent_Grand (1)-6d3e4823.png",
         "logo_alt": "Artisan Solution",
-        "has_primary_nav": true,
+        "has_primary_nav": false,
         "primary_nav_links": [
             {
                 "label": "FAQ",
