config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -50,7 +50,7 @@
                 "style": "link"
             },
             {
-                "label": "Terms & Conditions",
+                "label": "Mentions légales",
                 "url": "/terms-conditions",
                 "style": "link"
             },
