config.json: updated label in secondary_nav_links

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -55,7 +55,7 @@
                 "style": "link"
             },
             {
-                "label": "Privacy Policy",
+                "label": "Protection des données",
                 "url": "/privacy-policy",
                 "style": "link"
             }
