config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -118,7 +118,7 @@
                 "new_window": true
             }
         ],
-        "content": "&copy; Artisan Solution. Tous droites réservés.ed-footer\" target=\"_blank\" rel=\"noopener\">Stackbit</a>. Create yours <a href=\"https://app.stackbit.com/create?theme=personal&utm_source=deployed-footer\" target=\"_blank\" rel=\"noopener\">now</a>"
+        "content": "&copy; Artisan Solution. Tous droites réservés."
     },
     "announcement": {
         "has_anncmnt": true,
