config.json: updated content in footer

--- a/content/data/config.json
+++ b/content/data/config.json
@@ -118,7 +118,7 @@
                 "new_window": true
             }
         ],
-        "content": "&copy; Artisan Solution. Tous droites réservés."
+        "content": "&copy; Artisan Solution. Tous droits réservés."
     },
     "announcement": {
         "has_anncmnt": true,
