--- a/content/data/config.json
+++ b/content/data/config.json
@@ -37,7 +37,7 @@
                 "style": "link"
             },
             {
-                "label": "Contact me",
+                "label": "Nous contacter",
                 "url": "/contact",
                 "style": "link"
             }
