--- a/package.json
+++ b/package.json
@@ -18,18 +18,19 @@
     "moment": "^2.29.1",
     "moment-strftime": "^0.5.0",
     "next": "^10.0.7",
+    "node-sass": "^4.14.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-helmet": "^6.1.0",
     "react-html-parser": "^2.0.2",
     "react-script-tag": "^1.1.2",
+    "sass-loader": "^12.3.0",
     "sourcebit": "^0.11.0",
     "sourcebit-source-filesystem": "^0.1.3",
     "sourcebit-target-next": "^0.6.2",
     "webpack": "^5.24.1"
   },
   "devDependencies": {
-    "node-sass": "^6.0.1",
     "prettier": "^2.2.1"
   }
 }
